# rustberry

./: .gitignore  Cargo.toml  README.md
dht11/: Cargo.toml
dht11/src/: lib.rs  main.rs
heaptrace_csv/: Cargo.toml
lcd/: Cargo.toml  lcd.py
lcd/src/: lib.rs  main.rs
led/: Cargo.toml
led/examples/: drop.rs
led/src/: main.rs  main_simple.rs
mcp3008/: Cargo.toml
mcp3008/src/: main.rs
native/: led.c
src/: main.rs
watering/common/: Cargo.toml
watering/common/src/: lib.rs
watering/front-app/: Cargo.toml  README.md  index.html  index.scss
watering/front-app/src/: bindings.rs  main.rs  show_chart.js
watering/models/: Cargo.toml
watering/models/src/: lib.rs
watering/sensors/: Cargo.toml  Cross.toml  README.md  build.sh  config.json
watering/sensors/examples/: measure.rs
watering/sensors/migrations/: create_database.sql
watering/sensors/scripts/: build_rust.sh  install.sh  uninstall.sh  upload.sh
watering/sensors/src/: lib.rs  mail.rs  main.rs
watering/sensors/systemd/: water.service  water.timer
watering/server/: Cargo.toml  build.sh  readme.md
watering/server/scripts/: build.sh  install.sh  uninstall.sh  upload.sh
watering/server/src/: lib.rs  main.rs  rest.rs
watering/server/static/: index.html
watering/server/systemd/: watering_server.service
watering_demo/: Cargo.toml  build.sh  config.json  dummy_lib.rs  upload.sh
watering_demo/docker/: Dockerfile  Dockerfile_old
watering_demo/examples/: demo.rs
watering_demo/src/: lib.rs  main.rs
