[package]
name = "dht11"
version = "0.1.0"
authors = ["FlakM <maciej.jan.flak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


rppal = "0.11.3"
anyhow = "1.0"

lcd = { path = "../lcd" }


[[bin]]
name = "dht11"
path = "src/main.rs"

