[package]
name = "watering_demo"
version = "0.1.0"
authors = ["FlakM <maciej.jan.flak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "measure"


[lib]
name = "rustberry"
path = "src/lib.rs"

[[bin]]
name = "water-read"
path = "src/main.rs"


[dependencies]

rppal = "0.11.3"
mcp3008 = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

