[package]
name = "front-app"
version = "0.1.0"
authors = ["FlakM <maciej.jan.flak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.35"
serde = "1.0.118"
serde_derive = "1.0.118"
yew = "0.17.4"


wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
log = "0.4.11"
wasm-logger = "0.2.0"


common = {path = "../common"}
serde_json = "1.0.60"
chrono = "0.4.19"
