[package]
name = "watering_demo"
version = "0.1.0"
authors = ["FlakM <maciej.jan.flak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[example]]
# name = "measure"

# [[bin]]
# name = "rustberry"
# path = "src/main.rs"


[dependencies]

models = {path = "../models"}

rppal = "0.11.3"
mcp3008 = "1.0.0"

clap = "3.0.0-beta.2"

async-std = { version = "1.6.5", features = [ "attributes" ] }
sqlx = { version = "0.4.0-beta.1", default-features = true, features = [ "runtime-async-std", "postgres", "chrono", "bigdecimal" ] }
openssl = { version = "0.10", features = ["vendored"] }

anyhow = "1.0"