[package]
name = "rustberry"
version = "0.1.0"
authors = ["FlakM <maciej.jan.flak@gmail.com>"]
edition = "2018"

[[bin]]
name = "rustberry"
path = "src/main.rs"

[lib]
name = "models"
path = "src/lib.rs"


[dependencies]

rppal = "0.11.3"
mcp3008 = "1.0.0"

async-std = { version = "1.6.5", features = [ "attributes" ] }
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres", "chrono" ] }
openssl = { version = "0.10", features = ["vendored"] }

anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


chrono = {version = "0.4.19", features=["serde"] }
lettre = "0.10.0-alpha.4"
