[package]
name = "watering_server"
version = "0.1.0"
authors = ["FlakM <maciej.jan.flak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tide = "0.15.0"
async-std = { version = "1.6.0", features = ["attributes"] }


sqlx = { version = "0.4.1", features = [ "runtime-async-std-native-tls", "postgres", "chrono", "bigdecimal" ] }

chrono = {version = "0.4.19", features=["serde"] }
tide-sqlx = "0.2.5"


anyhow = "1.0.34"
tide-tracing = "0.0.7"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
