[package]
name = "watering_server"
version = "0.1.0"
authors = ["FlakM <maciej.jan.flak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

openssl = { version = "0.10", features = ["vendored"] }

sqlx = { version = "0.4.1", features = [ "runtime-async-std-native-tls", "postgres", "chrono", "bigdecimal" ] }

chrono = {version = "0.4.19", features=["serde"] }

anyhow = "1.0.34"

actix-web = "3"

env_logger = "0.7.1"
log = "0.4.8"
dotenv = "0.15.0"


actix-cors = "0.5.3"
actix-files = "0.4.1"
